[package]
name = "prql-query"
description = "pq: query and transform data with PRQL"
repository = "https://github.com/prql/prql-query"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.64.0"
version = "0.0.8"

[[bin]]
name = "pq"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
arrow = { version = "23", optional = true, features = ["default", "ipc_compression", "prettyprint"]}
async-trait = "0.1"
atty = "0.2"
camino = "1.1.1"
cfg-if = "1.0.0"
chrono = "0.4"
clap = { version = "3.2.3", features = ["derive", "env"] }
datafusion = { version = "12.0.0", optional = true , features = ["default", "avro"]}
dotenvy = "0.15.3"
duckdb = { version = "0.5.1", features = ["bundled", "modern-full"], optional = true }
env_logger = "0.9.0"
log = "0.4.17"
parquet = { version = "23" , optional = true }
polars = { version = "0.24.2", optional = true, features = ["docs-selection"] }
prql-compiler = { version = "0.2.9" }
regex = { version = "1.6.0", optional = true }
tokio = { version = "1.19", features = ["rt-multi-thread", "macros"] }
url = "2"

[features]
#default = ["datafusion"]
default = ["datafusion", "duckdb"]
datafusion = ["dep:datafusion", "dep:regex"]
duckdb = ["dep:duckdb", "dep:arrow", "dep:parquet"]
polars = ["dep:polars"]

[package.metadata.release]
shared-version = true
tag-name = "{{version}}"
tag-prefix = ""
